@@ -10,6 +10,18 @@ The project can be used in two steps:
 
 ![Configuration screenshot](http://cl.ly/image/1b2Q1J2Z1Q1y/processing-intellij.png)
 
+## Setting JavaFx
+1. Add to VM Option:
+`--module-path $PATH_TO_FX$ --add-modules javafx.controls,javafx.fxml`
+    where "$PATH_TO_FX$" should be set on 
+	`Settings/Preferences -> Appearance & Behavior -> Path Variables`  as your directory
+    For example "C:\javafx-sdk-11.0.2\lib"
+	
+2.  Go to:
+`Project Structure -> Libraries` 
+add the same directory of PATH_TO_FX  as library
+
+
 # About
 
 This project contains the Processing core libraries and is therefore distibuted under [GPL licence](LICENSE.md).
